refactor(Product.java, ProductService.java): 책임 분산하도록 리팩터링